--- a/irc-as/statsd-prometheus-mappings.cfg
+++ b/irc-as/statsd-prometheus-mappings.cfg
@@ -1,9 +1,12 @@
-req.*
-name="requests"
-outcome="$1"
+ircas.*.req.*.*
+name="ircas_requests"
+pid="$1"
+direction="$2"
+outcome="$3"
 job="irc-as"
 
-mem.*
-name="memory"
-type="$1"
+ircas.*.mem.*
+name="ircas_memory"
+pid="$1"
+type="$2"
 job="irc-as"
