Add connection mapping

--- a/irc-as/statsd-prometheus-mappings.cfg
+++ b/irc-as/statsd-prometheus-mappings.cfg
@@ -10,3 +10,9 @@ name="ircas_memory"
 pid="$1"
 type="$2"
 job="irc-as"
+
+ircas.*.irc.clients.connected.*
+name="ircas_conn_clients"
+pid="$1"
+domain="$2"
+job="irc-as"
