Update ircas mappings

--- a/irc-as/statsd-prometheus-mappings.cfg
+++ b/irc-as/statsd-prometheus-mappings.cfg
@@ -1,18 +1,18 @@
 ircas.*.req.*.*
 name="ircas_requests"
-pid="$1"
+ircinst="$1"
 direction="$2"
 outcome="$3"
 job="irc-as"
 
 ircas.*.mem.*
 name="ircas_memory"
-pid="$1"
+ircinst="$1"
 type="$2"
 job="irc-as"
 
 ircas.*.irc.clients.connected.*
 name="ircas_conn_clients"
-pid="$1"
+ircinst="$1"
 domain="$2"
 job="irc-as"
