Fix mapping (irc.whatever.com)

--- a/irc-as/statsd-prometheus-mappings.cfg
+++ b/irc-as/statsd-prometheus-mappings.cfg
@@ -11,9 +11,8 @@ ircinst="$1"
 type="$2"
 job="irc-as"
 
-ircas.*.irc.clients.connected.*
+ircas.*.irc.clients.connected.*.*.*
 name="ircas_conn_clients"
 ircinst="$1"
-domain="$2"
 job="irc-as"
 
