Go back to single-arg param for connected clients

--- a/irc-as/statsd-prometheus-mappings.cfg
+++ b/irc-as/statsd-prometheus-mappings.cfg
@@ -11,8 +11,8 @@ ircinst="$1"
 type="$2"
 job="irc-as"
 
-ircas.*.irc.clients.connected.*.*.*
-name="ircas_conn_clients"
+ircas.*.irc.clients.connected.*
+name="ircas_connected_clients"
 ircinst="$1"
 job="irc-as"
 
