Add membership ircas metric

--- a/irc-as/statsd-prometheus-mappings.cfg
+++ b/irc-as/statsd-prometheus-mappings.cfg
@@ -16,3 +16,9 @@ name="ircas_connected_clients"
 ircinst="$1"
 job="irc-as"
 
+ircas.*.membership.*.*
+name="ircas_membership"
+ircinst="$1"
+protocol="$2"
+state="$3"
+job="irc-as"
